<resources>
    <string name="app_name">CareMinder</string>
    <string name="feature">feature</string>
    <string name="statistic">statistic</string>
    <string name="notification">notification</string>
    <string name="setting">setting</string>
    <string name="hi_julia">Hi Julia!</string>
    <string name="profile">Profile</string>
    <string name="daily_activity_button">Daily activity</string>
    <string name="exercises_button">Exercises</string>
    <string name="steps_counting_button">Steps counting</string>
    <string name="food_for_calculating_calories_button">Food for calculating calories</string>
    <string name="water_for_body_button">Water for body</string>
    <string name="body_information_and_suggesting">Body information and suggesting</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="exercises">Exercises</string>
    <string name="steps">Steps</string>
    <string name="food">Food</string>
    <string name="water">Water</string>
    <string name="body">Body</string>
    <string name="steps_counting">Steps counting</string>
    <string name="_0">0</string>
    <string name="icon_counting_step">icon counting step</string>
    <string name="icon_duraion">icon_duraion</string>
    <string name="icon_calories_counting">icon calories counting</string>
    <string name="run">run</string>
    <string name="walk">walk</string>
    <string name="bicycle">bicycle</string>
    <string name="swim">swim</string>
    <string name="_6_000">/6.000</string>
    <string name="_1600_kcal">/1600 kcal</string>
    <string name="track_your_weight_and_body_composition_in_one_place">Track your weight and body composition in one place</string>
    <string name="glass">glass</string>
    <string name="subtract_a_cup_of_water">subtract a cup of water</string>
    <string name="add_a_cup_of_water">add a cup of water</string>
    <string name="give_us_some_basic_information">Give us some basic information</string>
    <string name="male_gender">male gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="height_slider">Height slider</string>
    <string name="female_gender">Female gender</string>
    <string name="_50cm">50cm</string>
    <string name="_300cm">300cm</string>
    <string name="weight_slider">weight slider</string>
    <string name="_20kg">20kg</string>
    <string name="_200kg">200kg</string>
    <string name="next_button">Next button</string>
    <string name="welcome">Welcome to your personal health tracker</string>
    <string name="intro">Health status monitoring</string>
    <string name="intro2">Health recommendations</string>
    <string name="intro3">Exercise regime</string>
    <string name="ic_default">Default</string>
    <string name="ic_active">Active</string>
    <string name="ic_back">Back</string>
    <string name="de_intro">Manage and monitor your health by creating personal profile that document your health history, current status and lifestyle preferences.</string>
    <string name="de_intro2">Recommendations are provided based on personalized information such as health history, interests and lifestyle.</string>
    <string name="de_intro3">Provides strength training exercises and stats insights. Set and track personal daily goals.</string>
    <string name="intro_skip_btn">Skip</string>
    <string name="steps_today">Today</string>
    <string name="steps_quantity">2000</string>
    <string name="steps_kcal">0 kcal</string>
    <string name="steps_km">0 km</string>
    <string name="steps_highlights">Highlights</string>
    <string name="steps_content_highlights">You averaged 1717 steps a day over the last 7 days</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_text">Calories Counter</string>
    <string name="food_hint">What did you eat?</string>
    <string name="cal_hint">Calories</string>
    <string name="submit_text">Submit</string>
    <string name="delete_item">Delete Item</string>
    <string name="share_title">Share</string>
    <string name="food_total">Total Calories:</string>
    <string name="cal_text">Cal.</string>
    <string name="num_foods">Food Items:</string>
    <string name="delete_menu">Delete</string>
    <string name="title_activity_a">a</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="reminder">Reminder</string>
    <string name="Reminder_content">Just one small positive thought in the morning can change your whole day</string>
    <string name="running">Running</string>
    <string name="Kilometer_Travelled">Kilometers Travelled: </string>
    <string name="Distance"> km</string>
    <string name="img_carrot">img_carrot</string>
    <string name="water_consumed">0</string>
    <string name="water_unit">/3000 ml</string>
    <string name="water_goal">2000</string>
    <string name="water_history">History</string>
    <string name="water_remind">Don’t forget to drink enough water!</string>
    <string name="water_setting">Water - Setting</string>
    <string name="water_set_goal">Set Goal</string>
    <string name="water_reminder">Reminder Schedule</string>
    <string name="water_default_time">Default Time</string>
    <string name="water_reminder_modify">Reminder Schedule Modify</string>
    <string name="water_add">Amount of water (ml)</string>
    <string name="body_comp">Current Body Composition</string>
    <string name="body_report">Body - Report</string>
    <string name="body_motivation">Change starts in your thoughts!</string>
    <string name="body_btn1">Body Report</string>
    <string name="body_btn2">Note History</string>
    <string name="body_btn3">Recommended For You</string>
    <string name="health_connect_description">Share data between your favorite apps</string>
    <string name="when_you_connect_careminder_to_health_connect_you_can_choose_which_data_types_to_add">When you connect CareMinder to Health Connect, you can choose which data types to add.</string>
    <string name="careminder_can_also_add_your_workout_stats_as_well_as_other_health_related_information_such_as_hydration_and_nutrition_data_to_health_connect_so_you_can_see_them_in_your_other_health_and_fitness_apps">CareMinder can also add your workout stats, as well as other health-related information such as hydration and nutrition data to Health Connect, so you can see them in your other health and fitness apps.</string>
    <string name="instruction">Instruction</string>
    <string name="delete_data">Delete Data</string>
    <string-array name="meal_types">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Snack</item>
        <item>Dinner</item>
    </string-array>
    <string name="select_meal_type">Select Meal Type</string>
    <string name="title_activity_question">Frequently asked questions</string>
</resources>