<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="2dp"
        android:gravity="center_horizontal">


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_feature"
            android:contentDescription="@string/feature"
            android:backgroundTint="@color/white"/>



        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_statistical"
            android:contentDescription="@string/statistic"
            android:backgroundTint="@color/white"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_notification"
            android:contentDescription="@string/notification"
            android:backgroundTint="@color/white"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_setting"
            android:tint="@color/icon"
            android:contentDescription="@string/setting"
            android:backgroundTint="@color/white"/>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>